--- a/src/components/Post.css
+++ b/src/components/Post.css
@@ -81,3 +81,34 @@ table {
 ul {
 	list-style-position: inside;
 }
+
+.md blockquote {
+	margin-block-start: 0.23em;
+	margin-block-end: 0.23em;
+}
+
+/* very important | for readability*/
+/* https://www.reddit.com/r/Android/comments/o0br6e/walking_around_with_your_galaxy_s21_ultra_in_your/ */
+/* Pretty much, always a Russian roulette on what they allow */
+
+.md > p {
+	padding: 0.5em 0 0.25em;
+}
+
+.md > p:first-child {
+	padding-top: 0px;
+}
+
+.md > p:last-child {
+	padding-bottom: 0px;
+}
+
+/* 
+what do there 2 do ?
+
+margin-block-start: 1em;
+margin-block-end: 1em;
+margin-inline-start: 40px;
+margin-inline-end: 40px;
+
+*/
